--- a/conf/config.properties
+++ b/conf/config.properties
@@ -7,6 +7,9 @@
 port.http=9000
 port.https=9443
 
+# allow TLS connections with invalid certificates
+httpsclient.trustall=true
+
 #https.redirect=on/off/redirect (redirects http to https)
 https.mode=off
 #https.keysource=keystore/key-cert
