--- a/.classpath
+++ b/.classpath
@@ -63,5 +63,8 @@
 	<classpathentry kind="lib" path="lib/netty-3.10.5.Final.jar"/>
 	<classpathentry kind="lib" path="lib/t-digest-3.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/jsoup-1.9.2.jar"/>
+	<classpathentry kind="lib" path="/home/jigyasa/Downloads/rome-1.0.jar"/>
+	<classpathentry kind="lib" path="/home/jigyasa/Downloads/jdom/build/jdom-1.1.3.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
