--- a/.classpath
+++ b/.classpath
@@ -66,5 +66,7 @@
 	<classpathentry kind="lib" path="lib/jsoup-1.9.2.jar"/>
 	<classpathentry kind="lib" path="/home/jigyasa/Downloads/rome-1.0.jar"/>
 	<classpathentry kind="lib" path="/home/jigyasa/Downloads/jdom/build/jdom-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/jdom-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/rome-1.0.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
