--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,11 @@ services:
                 build: .
          ports:
              - "80:80"
+         #Map volume-folder    
          volumes:
              - data:/data
+             
+#Create named volume             
 volumes:
        data: 
            external: false
