fix #1130: Make retries and back off parameter for backend push configurable
These variables can be set from config.properties by changing/defining caretaker.backendpush.retries and caretaker.backendpush.backoff respectively.

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -280,3 +280,7 @@ harvester.kaizen.queries_limit = 500
 
 # Verbosity (gives information to logs, if enabled)
 harvester.kaizen.verbose = true
+
+# Caretaker properties
+caretaker.backendpush.retries = 5
+caretaker.backendpush.backoff = 3000
