fix #1176: Fetch debug flag from config file
Change configurations for TwitterScraper and ClientConnection

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -257,6 +257,8 @@ classification.language.dutch=de,van,een,het,en,in,is,dat,op,te,De,zijn,voor,met
 # flags
 flag.fixunshorten = false
 flag.replaceinsteadunshorten = false
+flag.debug.twitter_scraper = false
+flag.debug.redirect_unshortener = false
 
 # harvester to use
 # possible values:
