--- a/conf/config.properties
+++ b/conf/config.properties
@@ -255,6 +255,10 @@ classification.language.spanish=que,de,no,a,la,el,es,y,en,lo,un,por,qué,me,una,t
 classification.language.dutch=de,van,een,het,en,in,is,dat,op,te,De,zijn,voor,met,die,niet,aan,er,om,Het,ook,als,dan,maar,bij,of,uit,nog,worden,door,naar,heeft,tot,ze,wordt,over,hij,In,meer,jaar,was,ik,kan,je,zich,al,hebben,geen,hun,we,wat,Een,Maar,werd,moet,wel,kunnen,Dat,nu,dit,deze,zal,Ik,veel,zo,En,andere,nieuwe,zou,twee,moeten,onder,eerste,haar,Van,wil,tegen,men,mensen,gaat,tussen,grote,waar,goed,maken,dus,alleen,Hij,Op,frank,ons,u,daar,na,had,gaan,alle,Als,Er,één
 
 # flags
+flag.log.dao = true;
+flag.severe.dao = true;
+flag.debug.dao = true;
+flag.trace.dao = true;
 flag.fixunshorten = false
 flag.replaceinsteadunshorten = false
 flag.debug.twitter_scraper = false
