--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,9 @@ before_deploy:
 - chmod 600 .utility/loklakserver.2
 - ssh-add .utility/loklakserver.1
 - ssh-add .utility/loklakserver.2
+- sudo add-apt-repository -y ppa:git-core/ppa
+- sudo apt-get update
+- sudo apt-get install git
 deploy:
   - provider: script
     skip_cleanup: true
