--- a/conf/config.properties
+++ b/conf/config.properties
@@ -268,6 +268,7 @@ flag.debug.redirect_unshortener = false
 # possible values:
 #   - classic: The default and original Loklak Harvester
 #   - kaizen: The alternative Loklak Harvester that can utilize Twitter API (optional)
+#   - priority_kaizen: An extension of Kaizen harvester that uses priority queue
 harvester.type = classic
 
 # Configurations for kaizen harvester
