Fix #1328: Add caching of data for aggregation response

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -291,3 +291,6 @@ harvester.kaizen.verbose = true
 # Caretaker properties
 caretaker.backendpush.retries = 5
 caretaker.backendpush.backoff = 3000
+
+# Classifier servlet caching expiry time in milliseconds
+classifierservlet.cache.timeout = 300000
