--- a/kubernetes/yamls/development/api-server/api-deployment.yml
+++ b/kubernetes/yamls/development/api-server/api-deployment.yml
@@ -19,6 +19,12 @@ spec:
         volumeMounts:
           - mountPath: /loklak_server/data
             name: data-index
+        readinessProbe:
+          httpGet:
+            path: /api/status.json
+            port: 80
+          initialDelaySeconds: 30
+          timeoutSeconds: 3
         livenessProbe:
           httpGet:
             path: /api/status.json
