Fix #1363: Add config to disable dump generation

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -294,3 +294,6 @@ caretaker.backendpush.backoff = 3000
 
 # Classifier servlet caching expiry time in milliseconds
 classifierservlet.cache.timeout = 300000
+
+# Enable dump generator
+dump.write_enabled = true
