--- a/kubernetes/yamls/development/api-server/api-deployment.yml
+++ b/kubernetes/yamls/development/api-server/api-deployment.yml
@@ -22,6 +22,12 @@ spec:
             port: 80
           initialDelaySeconds: 30
           timeoutSeconds: 3
+        readinessProbe:
+          httpGet:
+            path: /api/status.json
+            port: 80
+          initialDelaySeconds: 30
+          timeoutSeconds: 3
         ports:
         - containerPort: 80
           protocol: TCP
