--- a/kubernetes/yamls/development/elasticsearch/es-deployment.yaml
+++ b/kubernetes/yamls/development/elasticsearch/es-deployment.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: apps/v1beta1
+kind: Deployment
 metadata:
   name: es
   namespace: elasticsearch
@@ -15,6 +15,18 @@ spec:
       serviceAccount: elasticsearch
       containers:
       - name: es
+        livenessProbe:
+          httpGet:
+            path: /_cluster/health
+            port: 9200
+          initialDelaySeconds: 30
+          timeoutSeconds: 3
+        readinessProbe:
+          httpGet:
+            path: /_cluster/health
+            port: 9200
+          initialDelaySeconds: 30
+          timeoutSeconds: 3
         securityContext:
           capabilities:
             add:
