--- a/build.gradle
+++ b/build.gradle
@@ -159,3 +159,6 @@ jacocoTestReport {
     }
 }
 check.dependsOn jacocoTestReport
+
+task stage(dependsOn: ['build', 'clean'])
+build.mustRunAfter clean
