Fix #1392: Add MQTT Publisher with initialization in DAO

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -297,3 +297,7 @@ classifierservlet.cache.timeout = 300000
 
 # Enable dump generator
 dump.write_enabled = true
+
+# Stream
+stream.enabled = false
+stream.mqtt.address = tcp://127.0.0.1:1883
