--- a/build.gradle
+++ b/build.gradle
@@ -134,7 +134,7 @@ dependencies {
   compile group: 'org.twitter4j', name: 'twitter4j-stream', version: '4.0.2'
   compile group: 'xerces', name: 'xerces', version: '2.4.0'
   compile group: 'org.unbescape', name: 'unbescape', version: '1.0'
-  compile group: 'net.sf.xenqtt', name: 'xenqtt', version: '0.9.5'
+  compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
 }
 
 tasks.withType(Javadoc) {
