Fix #1445: Update deployment for staging and rename directory

--- a/kubernetes/yamls/staging/api-server/api-deployment.yml
+++ b/kubernetes/yamls/staging/api-server/api-deployment.yml
@@ -13,7 +13,8 @@ spec:
     spec:
       containers:
       - name: server
-        image: loklak/loklak_server:latest-kubernetes-development
+        imagePullPolicy: Always
+        image: loklak/loklak_server:latest-kubernetes-staging
         livenessProbe:
           httpGet:
             path: /api/status.json
