Fixes #1463: Set up Nginx with Kubernetes with SSL for master branch

--- a/kubernetes/yamls/api/api-server/api-service.yml
+++ b/kubernetes/yamls/api/api-server/api-service.yml
@@ -3,7 +3,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: server
-  namespace: web
+  namespace: api-web
 spec:
   ports:
   - port: 80
@@ -11,3 +11,4 @@ spec:
     targetPort: 80
   selector:
     app: server
+
