--- a/kubernetes/yamls/api/api-server/api-deployment.yml
+++ b/kubernetes/yamls/api/api-server/api-deployment.yml
@@ -3,7 +3,7 @@ apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: server
-  namespace: web
+  namespace: api-web
 spec:
   replicas: 1
   template:
