--- a/kubernetes/yamls/api/web/ingress-tls.yml
+++ b/kubernetes/yamls/api/web/ingress-tls.yml
@@ -1,13 +1,18 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: web-notls
-  namespace: staging-web
+  name: web
+  namespace: api-web
   annotations:
+    kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: "nginx"
 spec:
+  tls:
+  - hosts:
+    - api.loklak.org
+    secretName: loklak-api-tls
   rules:
-  - host: staging.loklak.org
+  - host: api.loklak.org
     http:
       paths:
       - path: /
