--- a/kubernetes/yamls/staging/web/ingress-tls.yml
+++ b/kubernetes/yamls/staging/web/ingress-tls.yml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: web
-  namespace: web
+  namespace: staging-web
   annotations:
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: "nginx"
