--- a/build.gradle
+++ b/build.gradle
@@ -59,83 +59,84 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.antlr', name: 'antlr-runtime', version: '3.5'
-    compile group: 'org.ow2.asm', name: 'asm', version: '4.1'
-    compile group: 'org.ow2.asm', name: 'asm-commons', version: '4.1'
-    compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.54'
-    compile group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.54'
-    compile group: 'com.robbypond', name: 'boilerpipe', version: '1.2.3'
-    compile group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
-    compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
-    compile group: 'com.github.spullara.mustache.java', name: 'compiler', version: '0.8.13'
-    compile group: 'com.ning', name: 'compress-lzf', version: '1.0.2'
-    compile group: 'org.elasticsearch', name: 'elasticsearch', version: '2.4.0'
-    compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.4'
-    compile group: 'com.google.guava', name: 'guava', version: '18.0'
-    compile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
-    compile group: 'org.hdrhistogram', name: 'HdrHistogram', version: '2.1.6'
-    compile group: 'com.carrotsearch', name: 'hppc', version: '0.7.1'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
-    compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.4'
-    compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.2'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.1'
-    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-cbor', version: '2.8.1'
-    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-smile', version: '2.8.1'
-    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.8.1'
-    compile group: 'com.sun.mail', name: 'javax.mail', version: '1.5.5'
-    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
-    compile group: 'net.sf.jcommon', name: 'jcommon', version: '1.0.1'
-    compile group: 'org.jdom', name: 'jdom', version: '1.1.3'
-    compile group: 'org.eclipse.jetty', name: 'jetty-http', version: '9.3.11.v20160721'
-    compile group: 'org.eclipse.jetty', name: 'jetty-io', version: '9.3.11.v20160721'
-    compile group: 'org.eclipse.jetty', name: 'jetty-rewrite', version: '9.3.11.v20160721'
-    compile group: 'org.eclipse.jetty', name: 'jetty-security', version: '9.3.11.v20160721'
-    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.3.11.v20160721'
-    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.3.11.v20160721'
-    compile group: 'org.eclipse.jetty', name: 'jetty-servlets', version: '9.3.11.v20160721'
-    compile group: 'org.eclipse.jetty', name: 'jetty-util', version: '9.3.11.v20160721'
-    compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version: '9.3.11.v20160721'
-    compile group: 'org.eclipse.jetty', name: 'jetty-eventsource-servlet', version: '1.0.0'
-    compile group: 'org.jfree', name: 'jfreechart', version: '1.0.19'
-    compile group: 'net.java.dev.jna', name: 'jna', version: '4.1.0'
-    compile group: 'org.joda', name: 'joda-convert', version: '1.2'
-    compile group: 'joda-time', name: 'joda-time', version: '2.9.4'
-    compile group: 'com.github.fge', name: 'json-schema-validator', version: '2.2.6'
-    compile group: 'org.jsoup', name: 'jsoup', version: '1.9.2'
-    compile group: 'com.twitter', name: 'jsr166e', version: '1.1.0'
-    compile group: 'com.vividsolutions', name: 'jts', version: '1.13'
-    compile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-1.2-api', version: '2.6.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.6.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.6.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.6.2'
-    compile group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '5.5.2'
-    compile group: 'org.apache.lucene', name: 'lucene-backward-codecs', version: '5.5.2'
-    compile group: 'org.apache.lucene', name: 'lucene-core', version: '5.5.2'
-    compile group: 'org.apache.lucene', name: 'lucene-grouping', version: '5.5.2'
-    compile group: 'org.apache.lucene', name: 'lucene-highlighter', version: '5.5.2'
-    compile group: 'org.apache.lucene', name: 'lucene-join', version: '5.5.2'
-    compile group: 'org.apache.lucene', name: 'lucene-memory', version: '5.5.2'
-    compile group: 'org.apache.lucene', name: 'lucene-misc', version: '5.5.2'
-    compile group: 'org.apache.lucene', name: 'lucene-queries', version: '5.5.2'
-    compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '5.5.2'
-    compile group: 'org.apache.lucene', name: 'lucene-sandbox', version: '5.5.2'
-    compile group: 'org.apache.lucene', name: 'lucene-spatial', version: '5.5.2'
-    compile group: 'org.apache.lucene', name: 'lucene-spatial3d', version: '5.5.2'
-    compile group: 'org.apache.lucene', name: 'lucene-suggest', version: '5.5.2'
-    compile group: 'net.sourceforge.nekohtml', name: 'nekohtml', version: '1.9.17'
-    compile group: 'io.netty', name: 'netty', version: '3.10.6.Final'
-    compile group: 'rome', name: 'rome', version: '1.0'
-    compile group: 'org.elasticsearch', name: 'securesm', version: '1.0'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
-    compile group: 'org.yaml', name: 'snakeyaml', version: '1.15'
-    compile group: 'com.spatial4j', name: 'spatial4j', version: '0.5'
-    compile group: 'com.tdunning', name: 't-digest', version: '3.0'
-    compile group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.2'
-    compile group: 'org.twitter4j', name: 'twitter4j-stream', version: '4.0.2'
-    compile group: 'xerces', name: 'xerces', version: '2.4.0'
-    compile group: 'org.unbescape', name: 'unbescape', version: '1.0'
-    compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
+    compile "org.apache.lucene:lucene-analyzers-common:${luceneVersion}"
+    compile "org.apache.lucene:lucene-backward-codecs:${luceneVersion}"
+    compile "org.apache.lucene:lucene-core:${luceneVersion}"
+    compile "org.apache.lucene:lucene-grouping:${luceneVersion}"
+    compile "org.apache.lucene:lucene-highlighter:${luceneVersion}"
+    compile "org.apache.lucene:lucene-join:${luceneVersion}"
+    compile "org.apache.lucene:lucene-memory:${luceneVersion}"
+    compile "org.apache.lucene:lucene-misc:${luceneVersion}"
+    compile "org.apache.lucene:lucene-queries:${luceneVersion}"
+    compile "org.apache.lucene:lucene-queryparser:${luceneVersion}"
+    compile "org.apache.lucene:lucene-sandbox:${luceneVersion}"
+    compile "org.apache.lucene:lucene-spatial:${luceneVersion}"
+    compile "org.apache.lucene:lucene-spatial3d:${luceneVersion}"
+    compile "org.apache.lucene:lucene-suggest:${luceneVersion}"
+    compile "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
+    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:${jacksonVersion}"
+    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-smile:${jacksonVersion}"
+    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${jacksonVersion}"
+    compile "org.eclipse.jetty:jetty-http:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-io:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-rewrite:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-security:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-server:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-servlet:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-servlets:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-util:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-webapp:${jettyVersion}"
+    compile "org.apache.logging.log4j:log4j-1.2-api:${log4jVersion}"
+    compile "org.apache.logging.log4j:log4j-api:${log4jVersion}"
+    compile "org.apache.logging.log4j:log4j-core:${log4jVersion}"
+    compile "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"
+    compile "org.bouncycastle:bcprov-jdk15on:${bouncycastleVersion}"
+    compile "org.bouncycastle:bcpkix-jdk15on:${bouncycastleVersion}"
+    compile "org.twitter4j:twitter4j-core:${twitter4jVersion}"
+    compile "org.twitter4j:twitter4j-stream:${twitter4jVersion}"
+    compile "org.ow2.asm:asm:${asmVersion}"
+    compile "org.ow2.asm:asm-commons:${asmVersion}"
+    compile "org.elasticsearch:elasticsearch:2.4.0"
+    compile "commons-logging:commons-logging:1.2"
+    compile "com.robbypond:boilerpipe:1.2.3"
+    compile "commons-cli:commons-cli:1.3.1"
+    compile "com.ning:compress-lzf:1.0.2"
+    compile "org.codehaus.groovy:groovy-all:2.4.4"
+    compile "com.google.guava:guava:18.0"
+    compile "org.hamcrest:hamcrest-core:1.3"
+    compile "org.hdrhistogram:HdrHistogram:2.1.6"
+    compile "com.carrotsearch:hppc:0.7.1"
+    compile "org.apache.httpcomponents:httpclient:4.5.2"
+    compile "org.apache.httpcomponents:httpcore:4.4.4"
+    compile "org.apache.httpcomponents:httpmime:4.5.2"
+
+    compile "com.github.spullara.mustache.java:compiler:0.8.13"
+    compile "org.antlr:antlr-runtime:3.5"
+    compile "com.sun.mail:javax.mail:1.5.5"
+    compile "javax.servlet:javax.servlet-api:3.1.0"
+    compile "net.sf.jcommon:jcommon:1.0.1"
+    compile "org.jdom:jdom:1.1.3"
+    compile "org.eclipse.jetty:jetty-eventsource-servlet:1.0.0"
+    compile "org.jfree:jfreechart:1.0.19"
+    compile "net.java.dev.jna:jna:4.1.0"
+    compile "org.joda:joda-convert:1.2"
+    compile "joda-time:joda-time:2.9.4"
+    compile "com.github.fge:json-schema-validator:2.2.6"
+    compile "org.jsoup:jsoup:1.9.2"
+    compile "com.twitter:jsr166e:1.1.0"
+    compile "com.vividsolutions:jts:1.13"
+    compile "junit:junit:4.12"
+    compile "net.sourceforge.nekohtml:nekohtml:1.9.17"
+    compile "io.netty:netty:3.10.6.Final"
+    compile "rome:rome:1.0"
+    compile "org.elasticsearch:securesm:1.0"
+    compile "org.slf4j:slf4j-api:1.7.21"
+    compile "org.yaml:snakeyaml:1.15"
+    compile "com.spatial4j:spatial4j:0.5"
+    compile "com.tdunning:t-digest:3.0"
+    compile "xerces:xerces:2.4.0"
+    compile "org.unbescape:unbescape:1.0"
+    compile "org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0"
 }
 
 tasks.withType(Javadoc) {
