Fixes #1600: Enable stream in server

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -299,5 +299,5 @@ classifierservlet.cache.timeout = 300000
 dump.write_enabled = true
 
 # Stream
-stream.enabled = false
+stream.enabled = true
 stream.mqtt.address = tcp://127.0.0.1:1883
