--- a/conf/config.properties
+++ b/conf/config.properties
@@ -106,7 +106,7 @@ peername=anonymous
 
 # a loklak instance can upgrade itself, by default every 24 hours
 # if an automatic update is not wanted, set this to i.e. ten years
-upgradeInterval = 86400000
+upgradeInterval = 24
 
 # settings to prevent DoS
 DoS.blackout = 100
