Push message to mongoDB

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -301,3 +301,7 @@ dump.write_enabled = true
 # Stream
 stream.enabled = false
 stream.mqtt.address = tcp://127.0.0.1:1883
+
+# MongoDB
+db.mongo.enabled = false
+db.mongo.address = mongodb://127.0.0.1:27017
