introduces noio if noio = true then an elasticsearch index is not written This is to be tested on small devices like RPi

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -301,3 +301,6 @@ dump.write_enabled = true
 # Stream
 stream.enabled = false
 stream.mqtt.address = tcp://127.0.0.1:1883
+
+# noio: if true do not create search indexes
+noio = false
