updated gradlew to 5.6.2

--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,12 @@ buildscript {
     }
 }
 
+plugins {
+  id 'com.github.johnrengelman.shadow' version '5.1.0'
+  id 'java'
+}
+
 apply plugin: 'java'
-apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'eclipse'
 apply plugin: 'checkstyle'
 apply plugin: 'jacoco'
