--- a/Dockerfile-arm32v7
+++ b/Dockerfile-arm32v7
@@ -1,12 +1,6 @@
 FROM arm32v7/openjdk:8-alpine
 LABEL maintainer="Michael Peter Christen <mc@yacy.net>"
 
-# create image on a Raspberry Pi with:
-# sudo apt-get install openjdk-8-jdk-headless:armhf
-# git clone https://github.com/loklak/loklak_server.git
-# cd loklak_server
-# docker build -t loklak_server-arm/latest -f Dockerfile-arm .
-
 # This image is suitable for Raspberry Pi 3, 4 and Compute Module 3,
 # for a RPi 1, 2, Compute Module 1 and Zero  please use the arm32v6 image.
 # See also: https://en.wikipedia.org/wiki/Raspberry_Pi#Processor
@@ -19,6 +13,22 @@ LABEL maintainer="Michael Peter Christen <mc@yacy.net>"
 
 # start the image with (i.e.)
 # docker run -d -p 9000:9000 <image>
+
+# copy the required parts of the source code
+ADD src /loklak_server/src/
+ADD gradle /loklak_server/gradle/
+ADD gradlew /loklak_server/
+ADD build.gradle /loklak_server/
+ADD settings.gradle /loklak_server/
+
+# compile loklak
+RUN cd /loklak_server && ./gradlew build --no-daemon -x checkstyleMain -x checkstyleTest -x jacocoTestReport
+
+# Second Stage
+FROM arm32v7/openjdk:8-jre-alpine
+
+# install required software
+RUN apk update && apk add --no-cache git bash
 
 # Create Volume for persistence
 VOLUME ["/loklak_server/data"]
@@ -33,23 +43,14 @@ ENV LANG=en_US.UTF-8
 EXPOSE 9000 9443
 
 # copy the required parts of the source code
+WORKDIR /loklak_server/
+COPY --from=builder /loklak_server/build/libs/loklak_server-all.jar build/libs/
 ADD bin /loklak_server/bin/
 ADD conf /loklak_server/conf/
-ADD src /loklak_server/src/
 ADD html /loklak_server/html/
 ADD installation /loklak_server/installation/
 ADD ssi /loklak_server/ssi/
-ADD gradle /loklak_server/gradle/
-ADD gradlew /loklak_server/
-ADD build.gradle /loklak_server/
-ADD settings.gradle /loklak_server/
 ADD test/queries /loklak_server/test/queries/
-
-# install required software
-RUN apk update && apk add --no-cache bash
-
-# compile loklak
-RUN cd /loklak_server && ./gradlew build -x checkstyleMain -x checkstyleTest -x jacocoTestReport
 
 # change config file
 RUN sed -i 's/^\(upgradeInterval=\).*/\186400000000/' /loklak_server/conf/config.properties
