--- a/build.gradle
+++ b/build.gradle
@@ -140,10 +140,15 @@ dependencies {
     compile group: 'xerces', name: 'xerces', version: '2.4.0'
     compile group: 'org.unbescape', name: 'unbescape', version: '1.0'
     compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
+    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.+'
 }
 
 tasks.withType(Javadoc) {
     options.addBooleanOption('Xdoclint:none', true)
+}
+
+tasks.withType(JavaCompile) {
+  options.encoding = 'UTF-8'
 }
 
 task setup(type: JavaExec, dependsOn: classes) {
