api.loklak.org runs under https

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -115,7 +115,7 @@ DoS.servicereduction = 500
 # peer-to-peer back-end: this is used to assign a 'shadow' peer which
 # receives all message data that this peer creates
 # if you don't want a p2p operation,remove the backend value
-backend=http://api.loklak.org,http://root.loklak.org
+backend=https://api.loklak.org,http://root.loklak.org
 backend.push.enabled=true
 
 # peer-to-peer front peer: this is used to assign scraping activities to
